--- a/static/css/main.css
+++ b/static/css/main.css
@@ -13,3 +13,14 @@ body {
     font-family: 'Segoe UI', sans-serif;
     font-weight: 380;
 }
+
+:root {
+    --main-background-color: #f2f2f2;
+    --dark-background-color: #a2a2a2;
+    --secondary-text-color: #808080;
+    --light-primary-text-color: #0080ff;
+}
+
+.footer {
+    min-height: 100px;
+}
