--- a/templates/snippets/footer.html
+++ b/templates/snippets/footer.html
@@ -1,3 +1,5 @@
-<div>
-    Djat Footer
+{% load static %}
+
+<div class="d-flex flex-row align-items-center footer bg-white shadow-lg mt-4">
+    <p class="m-auto">DJAT | 2021</p>
 </div>
