--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -47,7 +47,7 @@
                             <div class="btn-group dropleft">
                                 <img class="account-image rounded-circle m-auto d-block dropdown-toggle"
                                      id="id_profile_links" data-toggle="dropdown" aria-haspopup="true"
-                                     aria-expanded="false" src="{% static 'images/dummy_image.png' %}"
+                                     aria-expanded="false" src="{{ request.user.profile_image.url }}"
                                      alt="dummy logo" width="40" height="40">
                                 <div class="dropdown-menu" aria-labelledby="id_profile_links">
                                     <a class="dropdown-item" href="#">Account</a>
@@ -82,7 +82,7 @@
                             <div class="btn-group dropleft">
                                 <img class="account-image rounded-circle m-auto d-block dropdown-toggle"
                                      id="id_profile_links" data-toggle="dropdown" aria-haspopup="true"
-                                     aria-expanded="false" src="{% static 'images/dummy_image.png' %}"
+                                     aria-expanded="false" src="{{ request.user.profile_image.url }}"
                                      alt="dummy logo" width="40" height="40">
                                 <div class="dropdown-menu" aria-labelledby="id_profile_links">
                                     <a class="dropdown-item" href="#">Account</a>
