Added login/logout functionality

--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %}
-
 {% load static %}
 
 {% block styles %}
-    <link rel="stylesheet" href="{% static 'css/register.css' %}">
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -21,33 +20,30 @@
                         <input type="email" name="email" id="inputEmail" class="form-control"
                                placeholder="Email address" required autofocus>
 
-                        <input type="text" name="username" id="inputUsername" class="form-control"
-                               placeholder="Username" required>
-
-                        <input type="password" name="password1" id="inputPassword1" class="form-control"
+                        <input type="password" name="password" id="inputPassword" class="form-control"
                                placeholder="Password" required>
-
-                        <input type="password" name="password2" id="inputPassword2" class="form-control"
-                               placeholder="Confirm password" required>
                         <br>
 
-                        {% for field in registration_form %}
+                        {% for field in login_form %}
                             <p>
                                 {% for error in field.errors %}
                                     <p style="color: red">{{ error }}</p>
                                 {% endfor %}
                             </p>
                         {% endfor %}
-                        {% if registration_form.non_field_errors %}
+                        {% if login_form.non_field_errors %}
                             <div style="color: red">
-                                <p>{{ registration_form.non_field_errors }}</p>
+                                <p>{{ login_form.non_field_errors }}</p>
                             </div>
 
                         {% endif %}
 
-                        <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
-
+                        <button class="btn btn-lg btn-primary btn-block" type="submit">Log in</button>
                     </form>
+
+                    <div class="d-flex flex-column my-4">
+                        <a class="m-auto" href="#">Reset password</a>
+                    </div>
                 </div>
             </div>
 
