--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -51,14 +51,14 @@
                                      alt="dummy logo" width="40" height="40">
                                 <div class="dropdown-menu" aria-labelledby="id_profile_links">
                                     <a class="dropdown-item" href="#">Account</a>
-                                    <a class="dropdown-item" href="#">Logout</a>
+                                    <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
                                 </div>
                             </div>
                         </div>
 
                     </div>
                 {% else %}
-                    <a class="p-2 text-dark" href="#">Login</a>
+                    <a class="p-2 text-dark" href="{% url 'login' %}">Login</a>
                     <a class="btn btn-outline-primary" href="{% url 'register' %}">Register</a>
                 {% endif %}
             </nav>
@@ -86,13 +86,13 @@
                                      alt="dummy logo" width="40" height="40">
                                 <div class="dropdown-menu" aria-labelledby="id_profile_links">
                                     <a class="dropdown-item" href="#">Account</a>
-                                    <a class="dropdown-item" href="#">Logout</a>
+                                    <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
                                 </div>
                             </div>
                         </div>
                     </div>
                 {% else %}
-                    <a class="p-2 text-dark" href="#">Login</a>
+                    <a class="p-2 text-dark" href="{% url 'login' %}">Login</a>
                     <a class="btn btn-outline-primary m-2" href="{% url 'register' %}">Register</a>
                 {% endif %}
             </nav>
