--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -50,7 +50,7 @@
                                      aria-expanded="false" src="{{ request.user.profile_image.url }}"
                                      alt="dummy logo" width="40" height="40">
                                 <div class="dropdown-menu" aria-labelledby="id_profile_links">
-                                    <a class="dropdown-item" href="#">Account</a>
+                                    <a class="dropdown-item" href="{% url 'account:view' request.user.id %}">Account</a>
                                     <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
                                 </div>
                             </div>
@@ -85,7 +85,7 @@
                                      aria-expanded="false" src="{{ request.user.profile_image.url }}"
                                      alt="dummy logo" width="40" height="40">
                                 <div class="dropdown-menu" aria-labelledby="id_profile_links">
-                                    <a class="dropdown-item" href="#">Account</a>
+                                    <a class="dropdown-item" href="{% url 'account:view' request.user.id %}">Account</a>
                                     <a class="dropdown-item" href="{% url 'logout' %}">Logout</a>
                                 </div>
                             </div>
