--- a/templates/snippets/header.html
+++ b/templates/snippets/header.html
@@ -8,7 +8,7 @@
         <h5 class="mr-3 font-weight-normal justify-content-start">
             <a class="p-2 text-dark" href="{% url 'home' %}">Home</a>
         </h5>
-        <form class="search-bar justify-content-start">
+        <form class="search-bar justify-content-start" onsubmit="return executeQuery();">
             <input type="text" class="form-control" name="q" id="id_q_large" placeholder="Search...">
         </form>
 
@@ -71,7 +71,7 @@
         <h5 class="font-weight-normal">
             <a class="p-2 text-dark" href="{% url 'home' %}">Home</a>
         </h5>
-        <form class="search-bar justify-content-start">
+        <form class="search-bar justify-content-start" onsubmit="return executeQuery();">
             <input type="text" class="form-control" name="q" id="id_q_small" placeholder="Search...">
         </form>
         <div class="d-flex flex-row-reverse flex-grow-1">
@@ -100,3 +100,14 @@
     </div>
     <!-- END SMALL SCREENS -->
 </div>
+
+<script>
+    function executeQuery() {
+        let query = document.getElementById('id_q_small').value;
+        if (query === '') {
+            query = document.getElementById('id_q_large').value
+        }
+        window.location.replace("{% url 'search' %}?q=" + query)
+        return false
+    }
+</script>
