--- a/templates/accounts/edit_account.html
+++ b/templates/accounts/edit_account.html
@@ -70,8 +70,59 @@
 
 
     <script type="text/javascript">
+
+        enableImageOverlay()
+
         function readURL(imageUrl) {
             // TODO
+        }
+
+        function enableImageOverlay() {
+            let text = document.getElementById('id_text')
+            text.style.backgroundColor = "#0066ff"
+            text.style.color = "white"
+            text.style.fontSize = "16px"
+            text.style.padding = "16px 32px"
+            text.style.cursor = "pointer"
+
+            let profileImage = document.getElementById('id_profile_image')
+            profileImage.style.opacity = "1"
+            profileImage.style.display = "block"
+            profileImage.style.width = "100%"
+            profileImage.style.height = "auto"
+            profileImage.style.transition = ".5s ease"
+            profileImage.style.backfaceVisibility = "hidden"
+            profileImage.style.cursor = "pointer"
+
+            let middleContainer = document.getElementById('id_middle_container')
+            middleContainer.style.transition = ".5s ease"
+            middleContainer.style.opacity = "0"
+            middleContainer.style.position = "absolute"
+            middleContainer.style.top = "50%"
+            middleContainer.style.left = "50%"
+            middleContainer.style.transform = "translate(-50%, -50%)"
+            middleContainer.style.textAlign = "center"
+
+            let imageContainer = document.getElementById("id_image_container")
+		    imageContainer.addEventListener("mouseover", function( event ) {
+			    profileImage.style.opacity = "0.3"
+			    middleContainer.style.opacity = "1"
+		    })
+
+            imageContainer.addEventListener("mouseout", function( event ) {
+                profileImage.style.opacity = "1"
+                middleContainer.style.opacity = "0"
+		    })
+
+            imageContainer.addEventListener("click", function(event){
+			    document.getElementById('id_profile_image').click();
+		    });
+
+            let cropConfirm = document.getElementById('id_image_crop_confirm')
+            cropConfirm.classList.remove('d-flex')
+            cropConfirm.classList.remove('flex-row')
+            cropConfirm.classList.remove('justify-content-between')
+            cropConfirm.classList.add('d-none')
         }
     </script>
 
