--- a/templates/accounts/edit_account.html
+++ b/templates/accounts/edit_account.html
@@ -17,15 +17,16 @@
                         </div>
                         <div class="image-container" id="id_image_container">
                             <img class="border border-dark rounded-circle img-fluid mx-auto profile-image"
-                                 id="id_profile_image" src="{{ form.initial.profile_image.url }}"
+                                 id="id_profile_image_display" src="{{ form.initial.profile_image.url }}"
                                  alt="logo">
                             <div class="middle" id="id_middle_container">
                                 <div class="text" id="id_text">Edit</div>
                             </div>
                         </div>
-                        <form class="form-signin" method="post">{% csrf_token %}
-                            <input class="d-none" type="file" id="id_profile_image_file_selector"
-                                   name="profile_image_file_selector" onchange="readURL(this)">
+                        <form class="form-signin" method="post" enctype="multipart/form-data">
+                            {% csrf_token %}
+                            <input class="d-none" type="file" id="id_profile_image"
+                                   name="profile_image" onchange="readURL(this)">
                             <h6 class="mt-4 field-heading">Email</h6>
                             <input type="email" name="email" id="id_input_email" class="form-control"
                                    placeholder="Email address" required autofocus value={{ form.initial.email }}>
@@ -73,8 +74,19 @@
 
         enableImageOverlay()
 
-        function readURL(imageUrl) {
-            // TODO
+        function readURL(input) {
+            if (input.files && input.files[0]) {
+                let reader = new FileReader()
+
+                reader.onload = function (e) {
+                    disableImageOverlay()
+                    let image = e.target.result
+                    let imageField = document.getElementById('id_profile_image_display')
+                    imageField.src = image
+                }
+
+                reader.readAsDataURL(input.files[0])
+            }
         }
 
         function enableImageOverlay() {
@@ -126,7 +138,7 @@
         }
 
         function disableImageOverlay() {
-            let profileImage = document.getElementById('id_profile_image')
+            let profileImage = document.getElementById('id_profile_image_display')
             let middleContainer = document.getElementById('id_middle_container')
             let imageContainer = document.getElementById('id_image_container')
             let text = document.getElementById('id_text')
@@ -166,7 +178,8 @@
 
             let cancel = document.getElementById('id_cancel')
             cancel.addEventListener('click', function (event) {
-                console.log('reloading window')
+                console.log('reloading window...')
+                window.location.reload()
             })
         }
     </script>
